completeUserLoggedError